<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <!-- Title input field -->
    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:autofillHints=""
        android:hint="@string/titleEdit"
        android:inputType="text"
        android:padding="12dp"
        android:layout_marginBottom="8dp" />
    <!-- Amount input field -->
    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:autofillHints=""
        android:inputType="numberDecimal"
        android:hint="@string/amountEdit"
        android:padding="12dp"
        android:layout_marginBottom="8dp" />

    <!-- date input field -->
    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:padding="12dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/select_date"
        android:layout_marginBottom="8dp" />

    <!-- Category Spinner -->
    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:padding="12dp"
        android:layout_marginBottom="8dp" />
    <!-- save task button -->
    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="88dp"
        android:minHeight="48dp"
        android:text="@string/save"
        android:padding="12dp" />

</LinearLayout>